--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -14,4 +14,6 @@
 @import 'orchids';
 @import 'lifebehindplay';
 @import 'hover';
-@import 'sticky-footer';
+@import 'conduct';
+@import 'jobs';
+// @import 'sticky-footer';
