--- a/public/sass/_ko-home.scss
+++ b/public/sass/_ko-home.scss
@@ -7,7 +7,7 @@ $header-color: black;
 $primary-color: #13242B;
 $secondary-color: #3B84D4;
 $highlight-color: #4BD940;
-$header-image: url(/images/GNOG-screenshot5.png);
+$header-image: url(/images/GNOG-screenshot2bg.png);
 $header-bg-color: #44675B;
 $body-bg-color: #FFF;
 $subsection-bg-color: #DFE8D2;
@@ -70,7 +70,25 @@ strong {
 	/* Rectangle 3: */
 /* Rectangle 3: */
 background: #FB28B4;
+margin-bottom: 10px;
+margin-right: 10px;
 box-shadow: 0px 5px 0px 0px #AC0474;
+border-radius: 15px;
+width: 350px;
+height: 70px;
+/* Watch the trailer: */
+font-family: $headline-font;
+font-size: 30px;
+color: #FFFFFF;
+letter-spacing: 0px;
+}
+.preorderbutt {
+	/* Rectangle 3: */
+/* Rectangle 3: */
+background: $logo-color-orange;
+margin-bottom: 10px;
+margin-right: 10px;
+box-shadow: 0px 5px 0px 0px #cb4e2d;
 border-radius: 15px;
 width: 350px;
 height: 70px;
