--- a/public/sass/_navbar.scss
+++ b/public/sass/_navbar.scss
@@ -71,11 +71,11 @@ $link-hover-color: #212121;
 
 
 #yellow {
-	background-color: #f5d544;
+	color: #E6C63E;
 }
 
 #yellow:hover {
-	background-color: #ddc03a;
+	color: #C4A936;
 }
 
 #red {
